# systems-engineering

./: .gitignore  CLAUDE.md  LICENSE  README.md  generate.py  install.sh  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  install-claude-hooks.sh  notify-host.sh  start-notify-bridge.sh
.devcontainer/ci/: devcontainer.json
.github/workflows/: test.yml
design/: functional_decomposition.csv  functional_decomposition.d2  functional_decomposition.md  functional_decomposition.yaml  functions.d2  functions.md  functions.yaml  functions_functions.csv  functions_functions.d2  functions_functions.md  product_breakdown.csv  product_breakdown.d2  product_breakdown.md  product_breakdown.yaml
example/: functional_decomposition.yaml  product_breakdown.yaml
functional_decomposition/: example.yaml
scripts/: build-wheel.sh  build.sh  env.sh  generate.sh  regenerate_golden.sh  release.sh  setup.sh  test-install.sh  test.sh  venv.sh
src/systems_engineering/: __init__.py  cli.py  model.py  render.py
tests/: test_cli.py
tests/golden/: example_functions.csv  example_functions.md  example_products.d2  functional_decomposition.d2  product_breakdown.d2  product_breakdown.md  product_breakdown_products.csv
tests/install/: Dockerfile  Dockerfile.no-d2  Dockerfile.old-python
