[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "systems-engineering-diagrams"
version = "2.1.0"
description = "Generate systems engineering artefacts such as diagrams and tables from YAML definitions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Aidan Nagorcka-Smith", email = "aidanns@gmail.com"},
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
systems-engineering = "systems_engineering.cli:main"

[tool.pytest.ini_options]
markers = [
    "covers_function: mark a test as covering a named function from the functional decomposition",
]

[tool.setuptools.packages.find]
where = ["src"]
